--- a/day02/consumer-demo/src/main/resources/application.yml
+++ b/day02/consumer-demo/src/main/resources/application.yml
@@ -11,3 +11,7 @@ eureka:
     prefer-ip-address: true # \u5F53\u5176\u5B83\u670D\u52A1\u83B7\u53D6\u5730\u5740\u65F6\u63D0\u4F9Bip\u800C\u4E0D\u662Fhostname
     ip-address: 127.0.0.1 # \u6307\u5B9A\u81EA\u5DF1\u7684ip\u4FE1\u606F\uFF0C\u4E0D\u6307\u5B9A\u7684\u8BDD\u4F1A\u81EA\u5DF1\u5BFB\u627E
     registry-fetch-interval-seconds: 5 # \u62C9\u53D6\u9891\u7387
+# Ribbon\u8D1F\u8F7D\u5747\u8861\u7B56\u7565
+user-service:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
