--- a/day03/zuul-demo/src/main/resources/application.yml
+++ b/day03/zuul-demo/src/main/resources/application.yml
@@ -7,4 +7,12 @@ zuul:
   routes:
     user-service: # \u8FD9\u91CC\u662F\u8DEF\u7531id\uFF0C\u968F\u610F\u5199
       path: /user-service/** # \u8FD9\u91CC\u662F\u6620\u5C04\u8DEF\u5F84
-      url: http://127.0.0.1:8081 # \u6620\u5C04\u8DEF\u5F84\u5BF9\u5E94\u7684\u5B9E\u9645url\u5730\u5740
+      serviceId: user-service # \u6307\u5B9A\u670D\u52A1\u540D\u79F0
+eureka:
+  client:
+    registry-fetch-interval-seconds: 5 # \u83B7\u53D6\u670D\u52A1\u5217\u8868\u7684\u5468\u671F\uFF1A5s
+    service-url:
+      defaultZone: http://127.0.0.1:10086/eureka
+  instance:
+    prefer-ip-address: true
+    ip-address: 127.0.0.1
