--- a/day03/zuul-demo/src/main/resources/application.yml
+++ b/day03/zuul-demo/src/main/resources/application.yml
@@ -5,9 +5,7 @@ spring:
     name: api-gateway #\u6307\u5B9A\u670D\u52A1\u540D
 zuul:
   routes:
-    user-service: # \u8FD9\u91CC\u662F\u8DEF\u7531id\uFF0C\u968F\u610F\u5199
-      path: /user-service/** # \u8FD9\u91CC\u662F\u6620\u5C04\u8DEF\u5F84
-      serviceId: user-service # \u6307\u5B9A\u670D\u52A1\u540D\u79F0
+    user-service: /user-service/** # \u8FD9\u91CC\u662F\u6620\u5C04\u8DEF\u5F84
 eureka:
   client:
     registry-fetch-interval-seconds: 5 # \u83B7\u53D6\u670D\u52A1\u5217\u8868\u7684\u5468\u671F\uFF1A5s
