--- a/day03/zuul-demo/src/main/resources/application.yml
+++ b/day03/zuul-demo/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
   application:
     name: api-gateway #\u6307\u5B9A\u670D\u52A1\u540D
 zuul:
+  prefix: /api # \u6DFB\u52A0\u8DEF\u7531\u524D\u7F00
   routes:
     user-service: /user-service/** # \u8FD9\u91CC\u662F\u6620\u5C04\u8DEF\u5F84
 eureka:
