--- a/day15/rabbitmq-demo/src/main/resources/application.yml
+++ b/day15/rabbitmq-demo/src/main/resources/application.yml
@@ -2,5 +2,5 @@ spring:
   rabbitmq:
     host: 192.168.56.101
     username: leyou
-    password: leyou
+    password: 123456
     virtual-host: /leyou
